test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/namespace-readwrite.widl
namespace CSS {
  attribute object readwrite;
};
